--- a/package.json
+++ b/package.json
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/stack": "^7.0.2",
+    "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.76.0"
+    "react-brackets": "^0.4.7",
+    "react-native": "0.76.0",
+    "react-native-gesture-handler": "^2.21.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.1.0",
+    "react-native-svg": "^15.9.0",
+    "react-native-tournament-bracket": "^1.0.5",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
+    "reduxsauce": "^1.3.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -20,13 +40,16 @@
     "@react-native-community/cli": "15.0.0-alpha.2",
     "@react-native-community/cli-platform-android": "15.0.0-alpha.2",
     "@react-native-community/cli-platform-ios": "15.0.0-alpha.2",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "0.76.0",
     "@react-native/eslint-config": "0.76.0",
     "@react-native/metro-config": "0.76.0",
     "@react-native/typescript-config": "0.76.0",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components-react-native": "^5.2.5",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
