--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.2",
     "axios": "^1.7.7",
-    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-brackets": "^0.4.7",
     "react-native": "0.76.0",
     "react-native-gesture-handler": "^2.21.0",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "^3.16.1",
+    "react-native-reanimated": "3.15.4",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.1.0",
     "react-native-svg": "^15.9.0",
